# uavs_explore_indoor_environment

./: CMakeLists.txt  README.md  analyse.py  package.xml  result_four_uavs.txt  result_three_uavs.txt  result_two_uavs.txt
include/: base_planner.h  configuration.h  start.h  tracking_planner.h  uav.h  uav_exception.h  utiltools.h  wall_around_planner.h
launch/: default_four_uav_explore.launch  default_start_uavs.launch  four_uav_explore.launch  start_uavs.launch  three_uav_explore.launch  two_uav_explore.launch
maps/: map6.txt  map7.txt  map_15_30.txt  map_20_20.txt  map_20_40.txt  map_30_15.txt  map_30_30.txt  map_40_20.txt  map_40_40.txt
path_log/15_30_world/four_uavs/: uav1.txt  uav2.txt  uav3.txt  uav4.txt  uav5.txt
path_log/15_30_world/three_uavs/: uav0.txt  uav1.txt  uav2.txt  uav3.txt  uav4.txt  uav6.txt
path_log/15_30_world/two_uavs/: uav1.txt  uav2.txt  uav3.txt
path_log/20_20_world/four_uavs/: uav0.txt  uav2.txt  uav3.txt
path_log/20_20_world/three_uavs/: uav0.txt  uav1.txt  uav2.txt  uav3.txt  uav4.txt
path_log/20_20_world/two_uavs/: uav1.txt  uav5.txt
path_log/20_40_world/four_uavs/: uav1.txt  uav2.txt  uav3.txt  uav4.txt  uav5.txt  uav6.txt  uav7.txt
path_log/20_40_world/three_uavs/: uav0.txt  uav1.txt  uav2.txt  uav3.txt  uav4.txt  uav5.txt  uav6.txt
path_log/20_40_world/two_uavs/: uav1.txt  uav3.txt  uav4.txt
path_log/30_15_world/four_uavs/: uav0.txt  uav2.txt  uav3.txt  uav4.txt
path_log/30_15_world/three_uavs/: uav1.txt  uav2.txt  uav6.txt
path_log/30_15_world/two_uavs/: uav1.txt  uav2.txt  uav4.txt
path_log/30_30_world/four_uavs/: uav0.txt  uav1.txt  uav2.txt  uav3.txt  uav4.txt  uav5.txt  uav6.txt  uav7.txt
path_log/30_30_world/three_uavs/: uav0.txt  uav1.txt  uav2.txt  uav3.txt  uav4.txt  uav5.txt  uav6.txt
path_log/30_30_world/two_uavs/: uav0.txt  uav1.txt  uav3.txt  uav4.txt
path_log/40_20_world/four_uavs/: uav2.txt  uav3.txt  uav4.txt  uav6.txt  uav7.txt
path_log/40_20_world/three_uavs/: uav0.txt  uav1.txt  uav2.txt  uav3.txt  uav4.txt  uav5.txt  uav6.txt
path_log/40_20_world/two_uavs/: uav1.txt
path_log/40_40_world/four_uavs/: uav0.txt  uav2.txt  uav3.txt  uav4.txt  uav5.txt  uav6.txt  uav7.txt
path_log/40_40_world/three_uavs/: uav0.txt  uav1.txt  uav2.txt  uav3.txt  uav5.txt  uav6.txt
path_log/40_40_world/two_uavs/: uav1.txt  uav2.txt
positions/: default_map_init.txt  default_map_track.txt
rviz_cfg/: four_rviz_config.rviz
src/: start.cpp  tracking_planner.cpp  uav.cpp  wall_around_planner.cpp
srv/: TrackingUAVId.srv
worlds/: map6.world  map7.world  map_15_30.world  map_20_20.world  map_20_40.world  map_30_15.world  map_30_30.world  map_40_20.world  map_40_40.world
