<?xml version="1.0"?>
<package format="2">
  <name>uavs_explore_indoor_environment</name>
  <version>0.0.1</version>
  <description>The uavs_explore_indoor_environment package</description>
  <maintainer email="980994630@qq.com">ln</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>hector_gazebo_worlds</build_depend>
  <build_depend>hector_quadrotor_gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>hector_gazebo_worlds</build_export_depend>
  <build_export_depend>hector_quadrotor_gazebo</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>hector_gazebo_worlds</exec_depend>
  <exec_depend>hector_quadrotor_gazebo</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roslib</exec_depend>

</package>
